# solar-monitor

./: .gitignore  CMakeLists.txt  openocd.cfg
src/: controller-config.h  lwipopts.h  main.cpp  tasks.cpp  tasks.h
src/logging/: logging.cpp  logging.h
src/network/: mdns.cpp  mdns.h  mqtt.cpp  mqtt.h  network.cpp  network.h
